# nrf9160_rtic_demo

./: Cargo.toml  README.md  memory.x
src/: main.rs
