[package]
name = "nrf9160_flash_driver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nrf9160-hal = {version = "0.16.0"}
cortex-m = { version = "0.7.6", features = ["critical-section-single-core"] }
cortex-m-rtic = "1.1.4"
#panic-semihosting = "0.5.3"
#cortex-m-semihosting = "0.3.5"
defmt = {version = "0.3.1", optional = true}
defmt-rtt = {version = "0.4.0", optional = true}

#[dependencies.panic-rtt-target]
#version = "0.1.2"
#features = ["cortex-m"]

[features]
default = ["defmt", "defmt-rtt"]


